--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,3 @@
-#Tue Sep 11 11:59:02 CEST 2012
 eclipse.preferences.version=1
 encoding//www/modules/ibsbase/app/include/mlitexts.htm=UTF-8
 encoding//www/modules/ibsbase/app/lang/rb/ibs_ibsbase_buttons_bg_BG.properties=UTF-8
@@ -95,3 +94,4 @@ encoding//www/modules/masterd/app/lang/rb/m2_masterd_tabs_en_US.properties=UTF-8
 encoding//www/modules/masterd/app/lang/rb/m2_masterd_types_bg_BG.properties=UTF-8
 encoding//www/modules/masterd/app/lang/rb/m2_masterd_types_de_AT.properties=UTF-8
 encoding//www/modules/masterd/app/lang/rb/m2_masterd_types_en_US.properties=UTF-8
+encoding/<project>=ISO-8859-1
