--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>opentos - SOURCEFORGE (3.3.1)</name>
+	<name>OpenM2 (3.4.0+joestr-jdk9)</name>
 	<comment></comment>
 	<projects>
 	</projects>
